# communityFrame

./: .gitignore  README.md
src/: Cargo.toml
src/lambdas/auth/: Cargo.toml
src/lambdas/auth/src/: main.rs
src/libs/models/: Cargo.toml
src/libs/models/src/: auth.rs  lib.rs  user.rs
src/libs/models/src/auth/: mod.rs  register.rs
src/libs/repositories/: Cargo.toml
src/libs/repositories/src/: lib.rs
src/libs/repositories/src/dynamodb/: user.rs
src/libs/services/: Cargo.toml
src/libs/services/src/auth/: register.rs
