[package]
name = "repositories"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }

aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.50"
aws-sdk-s3 = "1.55"
lambda_http = "0.13"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = "4.2"
